Adding more MSSM text

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -222,14 +222,14 @@ to reduce an already low background.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[$m_{\phi} = 160$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_160.0_range12.pdf}}
-\subfloat[$m_{\phi} = 900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_900.0_range12.pdf}}~\\
-\subfloat[$m_{\phi} = 1600$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_1600.0_range12.pdf}}
-\subfloat[$m_{\phi} = 2900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_2900.0_range12.pdf}}
+\subfloat[$m_{\phi} = 160$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_160_range12.pdf}}
+\subfloat[$m_{\phi} = 900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_900_range12.pdf}}~\\
+\subfloat[$m_{\phi} = 1600$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_1600_range12.pdf}}
+\subfloat[$m_{\phi} = 2900$ GeV]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/optimisation_ggh_mt_2900_range12.pdf}}
 \end{center}
 \caption{Pre--fit expected limit on $\sigma\times$BR for the gg$\phi$ production process with decay into $\Pgt\Pgt$,
 s a function of tau isolation working point (from very loose to very very tight) and
-of \mT~ cut from \mT$<20$ GeV to \mt$<40$ GeV, normalised to the best limit in the plane, indicated by the asterisk. This is shown
+of \mT~ cut from \mT$<20$ GeV to \mT$<40$ GeV, normalised to the best limit in the plane, indicated by the asterisk. This is shown
 for $m_{\phi}$ = 160 GeV (a), 900 GeV (b), 1600 GeV (c) and 2900 GeV (d). The most optimal combination of \mT~selection and 
 hadronic tau isolation working point varies by mass point, with looser selections preferred for higher masses.}
 \label{fig:mssm_selection_mt_taumt}.
@@ -254,15 +254,15 @@ less pronounced.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_ggH.png}}
-\subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_bbH.png}}
+\subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_ggH_remake.pdf}}
+\subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt40_vs_tightmt30pt20_mt_bbH_remake.pdf}}
 \end{center}
-\caption{Pre-fit expected limits on $\sigma\times$BR in the \mutau channelfor (a) gg$\phi$ production and (b) bb$\phi$ production. The
-limits using the medium hadronic tau isolation working point and \mT$<40$ GeV selection using a minimum
-hadronic tau \pT~cut of 20 GeV (black circles), 30 GeV (blue circles) and 40 GeV (red circles). The green
+\caption{Pre-fit expected limits on $\sigma\times$BR in the \mutau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
+limits when using the medium hadronic tau isolation working point and \mT$<40$ GeV selection using a minimum
+hadronic tau \pT~cut of 20 GeV (red circles), 30 GeV (blue circles) and 40 GeV (black circles) are shown. The green
 circles show the limits using tighter tau isolation working point and \mT~selection. The limits on
 the gg$\phi$ production process improve at low masses when increasing the hadronic tau \pT~cut,
-the effect on the bb$\phi$ production process is less pronounced. FIXME REMAKE PLOT}
+the effect on the bb$\phi$ production process is less pronounced.}
 \label{fig:mssm_tauptcut}
 \end{figure}
 
@@ -294,7 +294,7 @@ Just like for muons, it was found that the analysis is not highly sensitive
 to the choice of electron isolation variable and selection, yet an effort
 is made not to use a suboptimal selection.
 A topological selection on the \mT~ variable is also made in this channel to reject \Wjets events. 
-The used value of $\mT < 50$ is obtained by performing a 2D optimisation where the \mT~ selection
+The used value of \mT $< 50$ is obtained by performing a 2D optimisation where the \mT~ selection
 and hadronic tau isolation working point are varied at the same time. The same considerations as
 for the \mutau channel apply. The choice of the hadronic tau \pT~ selection to 30 GeV is
 chosen to recover some of the sensitivity lost at low mass by using looser \mT~ and hadronic
@@ -302,15 +302,15 @@ tau isolation selections. This is illustrated in figure \ref{fig:mssm_tauptcut_e
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_ggH.png}}
-\subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_bbH.png}}
+\subfloat[gg$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_ggH_remake.pdf}}
+\subfloat[bb$\phi$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/mssm_optimisation_mediummt50_vs_tightmt40pt20_et_bbH_remake.pdf}}
 \end{center}
 \caption{Pre-fit expected limits on $\sigma\times$BR in the \etau channel for (a) gg$\phi$ production and (b) bb$\phi$ production. The
 limits using the medium hadronic tau isolation working point and \mT$<40$ GeV selection using a minimum
-hadronic tau \pT~cut of 20 GeV (black circles), 30 GeV (blue circles) and 40 GeV (red circles). The green
+hadronic tau \pT~cut of 20 GeV (red circles), 30 GeV (blue circles) and 40 GeV (black circles) are shown. The green
 circles show the limits using tighter tau isolation working point and \mT~selection. The limits on
 the gg$\phi$ production process improve at low masses when increasing the hadronic tau \pT~cut,
-the effect on the bb$\phi$ production process is less pronounced. FIXME REMAKE PLOT}
+the effect on the bb$\phi$ production process is less pronounced.}
 \label{fig:mssm_tauptcut_et}
 \end{figure}
 
@@ -370,11 +370,13 @@ of the visible decay products in the transverse plane. This selection is illustr
 \ref{fig:mssm_dzeta}a, with figure \ref{fig:mssm_dzeta}b showing the $D_{\zeta}$ distribution
 for \emu events. The used cut value, $D_{\zeta} > -20$ GeV rejects $\ttbar$, \Wjets and diboson
 events. 
+%The momentum of the neutrinos should not be in the opposite direction of the sum of the visible decay products
+%as the neutrinos and visible tau decay products travel at small angles from the original tau.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[Reconstruction of $D_{\zeta}$]{./includegraphics[width=0.5\textwidth]{./MSSM/Figures/PZeta.pdf}}
-\subfloat[$D_{\zeta}$ distribution in \emu channel]{./includegraphics[width=0.5\textwidth]{./MSSM/Figures/pzeta_inclusive_em_2016.pdf}}
+\subfloat[Reconstruction of $D_{\zeta}$]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/PZeta.pdf}}
+\subfloat[$D_{\zeta}$ distribution in \emu channel]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/pzeta_inclusive_em_2016.pdf}}
 \end{center}
 \caption{(a) reconstruction of $D_{\zeta}$ \cite{cdf-dzeta} and (b) $D_{\zeta}$ distribution in the 
 \emu channel\cite{CMS-PAS-HIG-16-037}.}
@@ -407,18 +409,25 @@ thus indicating the signal--sensitive bins, motivating the choice of categories.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[Number of jets]{/includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_jets_inclusive_tt_2016_log.png}}
-\subfloat[Number of b--tagged jets]{/includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_bjets_inclusive_tt_2016_log.png}}
+\subfloat[Number of jets]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_jets_inclusive_tt_2016_log.png}}
+\subfloat[Number of b--tagged jets]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/n_bjets_inclusive_tt_2016_log.png}}
 \end{center}
 \caption{(a) Number of jets and (b) number of b--tagged jets in the \tautau channel. The gluon--gluon fusion signal (COLOUR)
 and bb--associated signal (COLOUR2) are overlaid on the distribution, motivating the choice of
-categorisation to target the two different signals. FIXME REMAKE THESE PLOTS WITH SIGNAL ON!
+categorisation to target the two different signals. FIXME REMAKE THESE PLOTS WITH SIGNAL ON!}
 \label{fig:mssm_cats_tt}
 \end{figure}
 
 
 \section{\ac{MC} to data correction factors}
 \label{sec:mssm_mccorrs}
+\subsubsection*{Tracking efficiency}
+\subsubsection*{Electron, muon and tau ID and isolation}
+\subsubsection*{Trigger efficiency}
+\subsubsection*{$\Pe\rightarrow\Pgt_{h}$ fake rate and $\Pgm\rightarrow\Pgt_{h}$ fake rate}
+\subsubsection*{\MET recoil corrections}
+\subsubsection*{Top-quark \pT reweighting}
+\subsubsection*{Drell-Yan shape reweighting}
 
 \section{Discriminating variable}
 \label{sec:mssm_discrvar}
@@ -442,72 +451,312 @@ signal and \ttbar events in the \emu channel.
 \section{Background estimation}
 \label{sec:mssm_bkgs}
 The methods used for background estimation will be described in this
-channel. The background estimation in the \etau and \mutau channels
-is very similar and they are combined 
+section. As the \mutau and \etau channels use very similar
+background methods, they are described in the same subsection.
 
-\subsection{\texorpdfstring{\mutau and \etau channels}{mutau and etau channels}}
-\label{sec:mssm_bkgs_mtet}
+\subsection{Generator matching}
+\label{sec:mssm_bkgs_genmatch}
+For backgrounds estimated from \ac{MC} there are often 
+different sub--processes playing a role that should be
+treated separately by the fit. Taking the \mutau 
+channel as an example, a sample of Drell--Yan events
+will contain \Ztautau events, where one of the taus decays
+hadronically and the other tau decays to a muon, but also
+\Zmm events where one of the muons fakes a tau, or with an 
+additional jet in the event faking a hadronic tau and one of the
+muons not being properly reconstructed. Similarly, \ttbar background
+events can be split into those with genuine taus, and those
+where a jet mimics a hadronic tau.
 
-\subsubsection{\texorpdfstring{\Ztautau}{Z to tau tau}}
-\label{sec:mssm_bkgs_mtet_ztt}
+Dividing events from the same production
+process into sub--samples
+based on generator level information allows
+for a more correct treatment of systematic uncertainties. 
 
-\subsubsection{\texorpdfstring{\Wjets}{W+jets}}
-\label{sec:mssm_bkgs_mtet_wjets}
+To determine the generator-level particle
+that a reconstructed electron, muon, or hadronic tau
+originates from, reconstructed objects are matched
+to a set of generator level objects within a cone of $\Delta R = 0.2$.
+Five categories of generator-level object are considered for matching:
+prompt electrons and muons,
+that is electrons and muons not originating from a decay; electrons and muons
+from tau decays; and generator-level hadronic taus. These generator-level
+hadronic taus are rebuilt by summing the four--momenta
+of the visible decay products of the generator-level tau.
 
-\subsubsection{QCD}
-\label{sec:mssm_bkgs_mtet_qcd}
+All of these particles are looked for in a cone of $\Delta R = 0.2$ around
+the reconstructed object, and if there are multiple generator-level
+particles within this cone the one nearest the reconstructed particle
+is chosen as the object this particle is matched to. If there are no 
+generator-level particles in the cone at all it is said to 
+have originated from pile--up or a jet at generator level.
 
-\subsubsection{\texorpdfstring{\ttbar}{ttbar}}
-\label{sec:mssm_bkgs_mtet_tt}
+The generator--level object type matched to a 
+reconstructed particle is used to perform the splitting
+of background samples, and is indicated where this is used.
 
-\subsubsection{Other backgrounds}
-\label{sec:mssm_bkgs_mtet_other}
 
-\subsection{\texorpdfstring{\tautau channel}{tautau channel}}
+\subsection{\texorpdfstring{\Ztautau}{Z to tau tau}}
+\label{sec:mssm_bkgs_ztt}
+For all channels, both shape and normalisation of the \Ztautau background 
+is estimated from the Drell-Yan
+\ac{MC} samples described in section \ref{sec:mssm_datasets}.
+For the \mutau and \etau channels, events from these samples 
+in which the reconstructed hadronic tau is matched to 
+a generator-level hadronic tau are considered part of the \Ztautau
+background. In the \tautau channel both reconstructed
+hadronic taus are required to be matched to a generator-level hadronic tau, and
+in the \emu channel the \Ztautau component of the Drell-Yan background 
+is taken as those events where the reconstructed electron is not matched to
+a prompt electron at generator level and the reconstructed
+muon is not matched to a prompt muon. 
+Events in the Drell-Yan samples selected in the event selection
+but not satisfying the generator matching requirements are considered
+as the, much smaller, \Zll background.
+
+To correct and constrain the \Ztautau normalisation in the
+b-tag and no b-tag categories of all channels, \Zmm control
+regions are simultaneously fitted. More detail is given in 
+section \ref{sec:mssm_sigext_ctrl}.
+
+\subsection{\texorpdfstring{\Wjets and QCD in the \etau and \mutau channels}{W+jets and QCD in the e tau and mu tau channels}}
+\label{sec:mssm_bkgs_mtet_wjetsqcd}
+A data--driven approach is used for the estimation of
+both the \Wjets and QCD backgrounds in the \etau and \mutau channels. 
+The estimates of the normalisations of the two backgrounds are tied
+together due to the presence of some QCD contamination in the \Wjets--dominated
+control region. The shape of the \Wjets background is taken
+from the \ac{MC} samples, with the QCD shape taken from same--sign
+data with other backgrounds subtracted.
+
+\subsubsection{\texorpdfstring{\Wjets normalisation}{W+jets normalisation}}
+\label{sec:mssm_bkgs_mtet_wjetsnorm}
+The \Wjets normalisation is derived using a high-\mT~ control region, where
+selected events are required to satisfy \mT$>70$ GeV. In the no b-tag
+category the \Wjets
+contribution in this region is enhanced, however there is still
+some contribution from QCD events in this region. Therefore we
+have, for \mT$>70$ GeV:
+
+\begin{equation}\label{eqn:wjets_ss_norm}
+\begin{split}
+N_{\text{data}}^{SS, \text{high } m_{\text{T}}} - N_{\text{other}}^{SS,
+\text{high } m_{\text{T}}} & =
+N_{\text{QCD}}^{SS, \text{high } m_{\text{T}}} + N_{W}^{SS, \text{high } m_{\text{T}}} ~\\
+N_{\text{data}}^{OS, \text{high } m_{\text{T}}} - N_{\text{other}}^{OS,
+\text{high } m_{\text{T}}} & = N_{\text{QCD}}^{OS, \text{high } m_{\text{T}}} +
+N_{W}^{OS, \text{high } m_{\text{T}}} \\
+& = R_{\text{QCD}}^{OS/SS}\cdot N_{\text{QCD}}^{SS, \text{high } m_{\text{T}}} +
+R_{W}^{OS/SS} \cdot N_{W}^{SS, \text{high } m_{\text{T}}} ~\\
+\Rightarrow N_{W}^{SS, \text{high } m_{\text{T}}}  &= \frac{N_{\text{data}}^{OS,
+\text{high } m_{\text{T}}}  - N_{\text{other}}^{OS, \text{high } m_{\text{T}}}  -
+R_{\text{QCD}}^{OS/SS}\cdot(N_{\text{data}}^{SS, \text{high } m_{\text{T}}}  -
+N_{\text{other}}^{SS, \text{high } m_{\text{T}}} )}{R_{W}^{OS/SS} -
+R_{\text{QCD}}^{OS/SS}} ,
+\end{split}
+\end{equation}
+
+where $R_{W}^{OS/SS}$ is the ratio between opposite-sign and same-sign \Wjets events
+and $R_{QCD}^{OS/SS}$ the ratio between opposite-sign and same-sign QCD events. Using 
+equations \ref{eqn:wjets_ss_norm}, the number of \Wjets events in the
+opposite-sign, high \mT~region is given by $R_{W}^{OS/SS}\cdot N_{W}^{SS,\text{high} m_{T}}$. 
+This is extrapolated to the number of \Wjets events in the signal region at low \mT~ as:
+
+\begin{equation}\label{eqn:wjets_os_norm}
+N_{W}^{OS,\text{low} m_{T}} = \frac{N_{W,MC}^{OS,\text{low} m_{T}}}{N_{W,MC}^{OS,\text{high} m_{T}}}\cdot R_{W}^{OS/SS} \cdot N_W^{SS,\text{high }m_{T}},
+\end{equation}
+
+which is the estimate of the number of \Wjets events in the opposite-sign, high \mT, region
+multiplied by the ratio of the number of \ac{MC} events in the opposite-sign, low \mT~ region to the number of \ac{MC} events in the opposite-sign, high \mT~region. This means that
+the \ac{MC} samples are used to derive a high \mT-to-low \mT extrapolation factor.
+
+The use of the method presented relies on knowledge of $R_{W}^{OS/SS}$,
+$R_{QCD}^{OS/SS}$, and on these two ratios not being too similar to each other. 
+The ratio $R_{QCD}^{OS/SS}$ is measured in an anti--isolated
+control region in data; this is described in section ADD REF. $R_{W}^{OS/SS}$ is 
+taken from the \Wjets \ac{MC} samples, and is found to be between 4 and 5, while $R_{QCD}^{OS/SS}$
+is close to 1.
+
+The method described so far works well in the no b-tag categories, but in the b-tag category
+the \ttbar background dominates. For this reason the estimate of the number
+of \Wjets events in this category is made with a relaxed category selection where the b-tagging
+requirement itself is removed, but the jet requirements still stand. Events with at least one 
+jet with \pT$>20$ GeV and with $|\eta|<2.4$, but at most one jet with \pT$>30$ GeV and $|\eta|<4.7$, are therefore selected. The final \Wjets estimate in the b-tag category signal
+region is determined by the estimate given by the number of \Wjets events
+estimated in the 1-jet selection, multiplied by an extrapolation factor 
+$\frac{N_{W,MC}^{OS,\text{low } m_{T},\text{b-tag category}}}{N_{W,MC}^{OS,\text{low }m_{\text{T}},\text{1-jet selection}}}$ ADD FIGURES
+
+\subsubsection{QCD OS/SS ratio}
+\label{sec:mssm_bkgs_etmt_qcdosss}
+Studies of QCD OS/SS ratio go here
+
+\subsubsection{QCD normalisation}
+\label{sec:mssm_bkgs_etmt_qcdnorm}
+The QCD normalisation is estimated by inverting the opposite-sign requirement
+of the di-tau pair in the signal region. The yield is taken from the same--sign
+region with otherwise identical cuts to the opposite--sign region. The contributions
+from other backgrounds in this region are subtracted to give an estimate of the number
+of QCD events in the same--sign region. For all backgrounds apart from \Wjets the
+yields to subtract are estimated using \ac{MC} samples. The number of \Wjets events
+expected in this region is given by
+\begin{equation}\label{eqn:wjets_qcdsub}
+N_{W,SS SR} = \frac{N_{MC,SS SR}}{N_{MC,SS high mT}}N_{W,SS high mT}
+\end{equation}
+
+Because opposite--sign and same--sign QCD events do not
+necessarily appear in equal amounts the number of QCD
+events obtained by subtracting other backgrounds from the
+observed number of events in the same--sign region is multiplied
+by $R_{QCD}^{OS/SS}$ as derived in section \ref{sec:mssm_bkgs_etmt_qcdosss} 
+to obtain an estimate of the number of QCD events in the signal region.
+
+\subsubsection{Control regions in the fit}
+\label{sec:mssm_bkgs_etmt_ctrl}
+Several control regions in data are used for the estimation
+of the QCD and \Wjets backgrounds: the same--sign and 
+opposite--sign high \mT~ regions, as well as the same--sign
+low \mT~region. This leads to three control regions used 
+in each category of both the \mutau and \etau channels to determine
+the initial estimate of the background normalisations.
+These control regions are included in a simultaneous fit
+with the signal regions to obtain the final results.
+
+
+\subsection{QCD}
+\label{sec:mssm_bkgs_qcd}
+This section describes the QCD background
+estimation in the \tautau and \emu channels.
+
+\subsubsection{\texorpdfstring{\tautau channel}{tau tau channel}}
+\label{sec:mssm_bkgs_qcd_tt}
+In the \tautau channel the QCD background is by far the 
+dominant background. The normalisation and shape 
+of this background are estimated from a sideband with loosened 
+isolation requirements with respect to the signal region. 
+In the no b-tag category the sideband used is determined
+by having the tau with highest \pT~ pass the tight working
+point of the tau ID discriminator, as in the nominal selection.
+The other hadronic tau in the pair does not pass the tight working point,
+but does pass the medium working point. This sideband is 
+chosen as it is as close to the signal region as possible, and 
+this should minimise biases in the shape of the total transverse mass
+distribution. Other backgrounds
+in this sideband are subtracted from the observation to give
+the QCD estimate. Differences in normalisation due to
+the use of a loosened sideband are corrected for by loose-to-tight isolation
+scale factor. This correction factor is measured as
+\begin{equation}\label{eqn:tautau_qcd}
+R_{QCD}^{\text{loose}\rightarrow\text{tight}} = \frac{N_{obs}^{SS,\text{nominal isolation}}-N_{\text{other bkgs}}^{SS,\text{loosened isolation}}}{N_{obs}^{SS,\text{loosened isolation}}-N_{\text{other bkgs}}^{SS,\text{loosened isolation}}}.
+\end{equation}
+
+So this takes the ratio between the observed data with other
+backgrounds subtracted in the region equivalent to the signal region, but with the
+charge requirement of the pair inverted, and the region equivalent to the sideband
+with loosened isolation but with the charge requirement on the pair inverted.
+
+An analogous method is used for this estimate in the 
+b-tag category, however, the sideband as used for the 
+no b-tag category does not contain enough events to 
+provide a background estimate. Therefore a sideband where
+the highest \pT~tau passes the tight working point of the
+tau ID discriminator, and the other tau passes the loose working
+point of the discriminator, but not the tight working point, is used.
+This sideband is slightly further away from the signal region than the
+'tight--medium' sideband INSERT FIGURE. The bias from using this looser
+sideband has been assessed and has a less than 1$\sigma$ effect.
+FIXME THIS ISN'T VERY USEFUL INFO!
+
+\subsubsection{\texorpdfstring{\emu channel}{e mu channel}}
+\label{sec:mssm_bkgs_qcd_em}
+In the \emu channel the QCD multijet background
+is estimated by inverting the charge requirement
+of the pair, considering the same--sign region
+with otherwise identical cuts to the signal region.
+Other backgrounds present in this region are subtracted.
+As for the \etau and \mutau channels, the number of
+QCD events with opposite--sign \emu pairs is not
+necessarily equal to the number of QCD events
+with same--sign \emu pairs and therefore the ratio
+of opposite--sign to same--sign pairs is measured by inverting
+the isolation requirements on the electron or muon. Both
+leptons need to satisfy $I_{\text{rel}} < 0.4$ and at 
+least one of them needs to fail the nominal isolation requirement.
+The opposite--sign to same--sign ratio is parameterised in terms
+of lepton kinematics and the separation in $\Delta R$ between the
+two leptons. These ratios are then applied to the same--sign region
+QCD estimate to give a QCD estimate in the signal region. 
+Because the opposite--sign to same--sign ratios are measured
+before applying the categorisation, and \ac{MC} studies suggest
+that the opposite--sign to same--sign ratio is different in the b-tag
+category than in the no b-tag category, an extra scale factor of 
+1.45/2.20 is applied to the QCD estimate in this category.
+
+
+\subsection{\texorpdfstring{\ttbar}{ttbar}}
 \label{sec:mssm_bkgs_tt}
+The \ttbar shape and normalisation are estimated from \ac{MC} 
+samples and are checked against data in a control
+region with a \ttbar purity of 91\%. This control region
+is defined as $D_{\zeta} < -20$ GeV and \MET $>80$ GeV in 
+the \emu channel. INSERT PLOT
+In the \mutau, \etau and \tautau channels
+the \ttbar contribution is split into
+two components, one with real taus and 
+one without. The component with real taus is composed
+of \ttbar events in which the hadronic tau is matched
+to a generator level tau. In the fully hadronic channel
+both taus need to be generator matched to a hadronically
+decaying tau.
 
-\subsubsection{\texorpdfstring{\Ztautau}{Z to tau tau}}
-\label{sec:mssm_bkgs_tt_ztt}
-
-\subsubsection{QCD}
-\label{sec:mssm_bkgs_tt_qcd}
-
-\subsubsection{\texorpdfstring{\Wjets}{W+jets}}
-\label{sec:mssm_bkgs_tt_wjets}
-
-\subsubsection{\texorpdfstring{\ttbar}{ttbar}}
-\label{sec:mssm_bkgs_tt_tt}
-
-\subsubsection{Other backgrounds}
-\label{sec:mssm_bkgs_tt_other}
-
-\subsection{\texorpdfstring{\emu channel}{emu channel}}
-\label{sec:mssm_bkgs_em}
-
-\subsubsection{\texorpdfstring{\Ztautau}{Z to tau tau}}
-\label{sec:mssm_bkgs_em_ztt}
-
-\subsubsection{QCD}
-\label{sec:mssm_bkgs_em_qcd}
-
-\subsubsection{\texorpdfstring{\Wjets}{W+jets}}
-\label{sec:mssm_bkgs_em_wjets}
-
-\subsubsection{\texorpdfstring{\ttbar}{ttbar}}
-\label{sec:mssm_bkgs_em_tt}
-
-\subsubsection{Other backgrounds}
-\label{sec:mssm_bkgs_em_other}
+\subsection{Other backgrounds}
+\label{sec:mssm_bkgs_other}
+For all channels the di--boson plus 
+single--top background is small.
+Both normalisation and shape are estimated from \ac{MC}
+samples. For the \etau, \mutau and \tautau channels
+this background contribution is split into a component
+where the hadronically decaying tau originates from a real
+tau, and one where it does not. This is done in a similar
+way as for the \ttbar background
+In the \tautau and \emu channels the \Wjets background
+is less important than in the \etau and \mutau channels, and both
+its shape and normalisation are estimated from the
+\ac{MC} samples.
 
 
 \section{Systematic uncertainties}
 \label{sec:mssm_uncs}
+Just like for the analysis presented in chapter \ref{chap:hhh}
+two types of systematic uncertainty are considered. Normalisation
+uncertainties only affect the yield of a process while shape
+uncertainties affect both the process normalisation, as well as the shape
+of the \mTtot~ distribution. The uncertainties are taken into account 
+in the final result as described in section \ref{sec:hhh_results_extraction}.
 
 \subsection{Normalisation uncertainties}
 \label{sec:mssm_uncs_norm}
+\subsubsection*{Luminosity uncertainty}
+The uncertainty on the luminosity measurement amounts to 6.2\% for
+data collected during 2016 \cite{cms-pas-lum-15-001}, and it is
+applied to all processes for which the normalisation was estimated 
+using \ac{MC} samples.
+\subsubsection*{Identification, isolation and trigger efficiencies}
+\subsubsection*{jet$\rightarrow\Pgt_{h}$ fake rate}
+\subsubsection*{$\Pe\rightarrow\Pgt_{h}$ and $\Pgm\rightarrow\Pgt_{h}$ fake rate}
+\subsubsection*{Jet energy scale uncertainty}
+\subsubsection*{B-tag scale factors}
+\subsubsection*{\MET resolution and response}
+\subsubsection*{Background normalisation}
+\subsubsection*{Theory uncertainties}
 
 \subsection{Shape uncertainties}
 \label{sec:mssm_uncs_shape}
+\subsubsection*{$\Pgt_{h}$ energy scale}
+\subsubsection*{Electron energy scale}
+\subsubsection*{High-\pT~ $\Pgt_{h}$ ID efficiency}
+\subsubsection*{Top quark \pT~ reweighting}
+\subsubsection*{Drell-Yan shape reweighting}
+\subsubsection*{Jet$\rightarrow\Pgt_{h}$ fake rate shape reweighting}
 
 \section{Signal extraction}
 \label{sec:mssm_signalextraction}
