--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -18,7 +18,7 @@ respectively.
 To reconstruct the trajectories of charged particles - and therefore
 their momenta and positions - from the hits they leave in the 
 inner tracker the
-\ac{CTF} algorithm is used. This algorithm performs four steps.
+\ac{CTF} algorithm is used \cite{cms-trk-algos}. This algorithm performs four steps.
 First, initial estimates of the parameters of the trajectory are given by track seeds, 
 made out of the hits found in 2 or 3 layers of the inner tracker. These track seeds
 are extrapolated using a \ac{KF} \cite{trk-kf}, which extrapolates the seeding
